--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,11 +1,11 @@
 .navbar {
-  background-color: #1f5156;
+  background-color: #fff;
   height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
-  position: sticky;
+  /* position: sticky; */
   top: 0;
   z-index: 20;
 }
@@ -17,10 +17,11 @@
   width: 100%;
   height: 80px;
   max-width: 1500px;
+ 
 }
 
 .nav-logo {
-  color: #f5b921;
+  color: #000;
   align-items: center;
   margin-left: 20px;
   cursor: pointer;
@@ -37,7 +38,7 @@
 }
 
 .nav-links {
-  color: #fff;
+  color: #000;
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
@@ -63,12 +64,12 @@
 
 .nav-item:hover:after {
   width: 100%;
-  background: #ffdd40;
+  background: #5995fd;
 }
 
 .nav-item .active {
-  color: #ffdd40;
-  border: 1px solid #ffdd40;
+  color: #5995fd;
+  border: 1px solid #5995fd;
 }
 
 .nav-icon {
@@ -89,14 +90,14 @@
   }
 
   .nav-menu.active {
-    background: #1f5156;
+    background: #a2d2d6;
     left: 0px;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
   }
   .nav-item .active {
-    color: #ffdd40;
+    color: #5995fd;
     border: none;
   }
   .nav-links {
@@ -113,6 +114,6 @@
     transform: translate(-100%, 60%);
     font-size: 1.8rem;
     cursor: pointer;
-    color: #ffdd40;
+    color: #000;
   }
 }
